deployment-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: addressbook-deployment
  labels: addressbook-label-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: addressbook-selector
  template:
    metadata:
      labels:
        app: addressbook-selector
    spec:
      containers:
        - name: addressbook-cont
          image: nexus.local:5000/java-school/cloud/addressbook:1
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: addressbook-config-volume
              mountPath: /app/config
      volumes:
        - name: addressbook-config-volume
          configMap:
            name: addressbook-config
