service-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: addressbook #address for connect
spec:
  selector:
    app: addressbook-selector
  ports:
    - name: addressbook-api
      protocol: TCP
      port: 9090
      targetPort: http
