service-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: db
spec:
  selector:
    app: db-selector
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: tcp-postgres
