ingress.yaml
kind: Ingress
apiVersion: networing.k8s.io./v1
metadata:
  name: addressbook-ingress
  labels: 
    app: addressbook
spec:
  rules:
    - host: addressbook.apps.sbc-okd.pcbltools.ru
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: addressbook
                port:
                  name: addressbook-api
